--- a/src/app/components/product/product-create/product-create.component.html
+++ b/src/app/components/product/product-create/product-create.component.html
@@ -1,1 +1,7 @@
-<h1>Funciona</h1>
+<button mat-raised-button (click)="createProduct()" color="primary">
+    Salvar
+</button>
+
+<button mat-raised-button (click)="cancel()">
+    Cancelar
+</button>
